@@ -58,7 +58,7 @@ public class SecurityConfig {
   CorsConfigurationSource corsConfigurationSource() {
     CorsConfiguration configuration = new CorsConfiguration();
 
-    configuration.setAllowedOrigins(Collections.singletonList("http://localhost:3000"));
+    configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:5173"));
     configuration.setAllowedHeaders(List.of("*"));
     configuration.setAllowedMethods(Arrays.asList("GET", "POST", "OPTIONS"));
     configuration.setAllowCredentials(true);
